✨ feat(软删除调试): 统一调试项目的软删除框架
