# build/swagger.json
@@ -46,6 +46,22 @@
       },
       "UserDTO": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "_id": {
             "type": "string",
             "description": "用户id"
@@ -299,11 +315,26 @@
           }
         },
         "required": ["keyLanguageMap", "language"],
-        "type": "object",
-        "description": "所有需要携带语言文档都必须继承于该接口，用于在Controller中进行直接调用"
+        "type": "object"
       },
       "ProductDTO": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "languageList": {
             "items": {
               "$ref": "#/components/schemas/LanguageItemType"
@@ -420,6 +451,7 @@
         "additionalProperties": false
       },
       "PageDTO": {
+        "description": "分页请求参数DTO",
         "properties": {
           "pageIndex": {
             "type": "number",
@@ -454,6 +486,96 @@
         },
         "type": "object",
         "additionalProperties": false
+      },
+      "Partial_ProductDTO_": {
+        "properties": {
+          "cates": {
+            "items": {
+              "$ref": "#/components/schemas/mongoose.Types.ObjectId"
+            },
+            "type": "array"
+          },
+          "productName": {
+            "type": "string"
+          },
+          "masterPicture": {
+            "type": "string"
+          },
+          "descPictures": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array"
+          },
+          "slug": {
+            "type": "string"
+          },
+          "state": {
+            "type": "string",
+            "enum": ["online", "offline"]
+          },
+          "richText": {
+            "type": "string"
+          },
+          "brand": {
+            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
+          },
+          "activityPrice": {
+            "type": "number",
+            "format": "double"
+          },
+          "sales": {
+            "type": "number",
+            "format": "double"
+          },
+          "score": {
+            "type": "number",
+            "format": "double"
+          },
+          "languageList": {
+            "items": {
+              "$ref": "#/components/schemas/LanguageItemType"
+            },
+            "type": "array"
+          },
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录删除时间"
+          }
+        },
+        "type": "object",
+        "description": "Make all properties in T optional"
+      },
+      "EditProductParams": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/Partial_ProductDTO_"
+          },
+          {
+            "properties": {
+              "brandId": {
+                "type": "string"
+              }
+            },
+            "required": ["brandId"],
+            "type": "object"
+          }
+        ]
       },
       "BaseObjectEntity_ProductDTO-or-null_": {
         "properties": {
@@ -496,6 +618,22 @@
       },
       "EvaluateDto": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "userId": {
             "$ref": "#/components/schemas/mongoose.Types.ObjectId"
           },
@@ -538,6 +676,22 @@
       },
       "CateDTO": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "title": {
             "type": "string"
           },
@@ -618,6 +772,22 @@
       },
       "BrandDTO": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "name": {
             "type": "string"
           }
@@ -716,6 +886,22 @@
       },
       "AddressDTO": {
         "properties": {
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true,
+            "description": "记录删除时间"
+          },
           "isDefault": {
             "type": "boolean"
           },
@@ -801,12 +987,27 @@
         "type": "object",
         "additionalProperties": false
       },
-      "Pick_UserDTO.Exclude_keyofUserDTO.password-or-refreshToken-or-accessToken-or-logoutTime__": {
+      "Pick_UserDTO.Exclude_keyofUserDTO.password-or-refreshToken-or-accessToken-or-logoutTime-or-isPasswordMatched__": {
         "properties": {
           "email": {
             "type": "string",
             "description": "用户邮箱",
             "example": "kbmjj123@gmail.com"
+          },
+          "createTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录创建时间"
+          },
+          "modifyTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录修改时间"
+          },
+          "deleteTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "记录删除时间"
           },
           "_id": {
             "type": "string",
@@ -843,12 +1044,12 @@
         "type": "object",
         "description": "From T, pick a set of properties whose keys are in the union K"
       },
-      "Omit_UserDTO.password-or-refreshToken-or-accessToken-or-logoutTime_": {
-        "$ref": "#/components/schemas/Pick_UserDTO.Exclude_keyofUserDTO.password-or-refreshToken-or-accessToken-or-logoutTime__",
+      "Omit_UserDTO.password-or-refreshToken-or-accessToken-or-logoutTime-or-isPasswordMatched_": {
+        "$ref": "#/components/schemas/Pick_UserDTO.Exclude_keyofUserDTO.password-or-refreshToken-or-accessToken-or-logoutTime-or-isPasswordMatched__",
         "description": "Construct a type with the properties of T except for those in type K."
       },
       "UserWithoutToken": {
-        "$ref": "#/components/schemas/Omit_UserDTO.password-or-refreshToken-or-accessToken-or-logoutTime_",
+        "$ref": "#/components/schemas/Omit_UserDTO.password-or-refreshToken-or-accessToken-or-logoutTime-or-isPasswordMatched_",
         "description": "不带token的用户信息"
       },
       "BaseObjectEntity_UserWithoutToken_": {
@@ -1361,7 +1562,9 @@
           "required": true,
           "content": {
             "application/json": {
-              "schema": {}
+              "schema": {
+                "$ref": "#/components/schemas/EditProductParams"
+              }
             }
           }
         }
@@ -1913,6 +2116,47 @@
             "in": "path",
             "name": "id",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/account/list": {
+      "get": {
+        "operationId": "GetUserList",
+        "responses": {
+          "204": {
+            "description": "No content"
+          }
+        },
+        "description": "获取用户列表",
+        "tags": ["账号模块"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "pageIndex",
+            "required": true,
+            "schema": {
+              "format": "double",
+              "type": "number"
+            }
+          },
+          {
+            "in": "query",
+            "name": "pageSize",
+            "required": true,
+            "schema": {
+              "format": "double",
+              "type": "number"
+            }
+          },
+          {
+            "in": "query",
+            "name": "keyword",
+            "required": false,
             "schema": {
               "type": "string"
             }
